--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-output/*
-img/*
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+/.idea/
+/.vscode/
+###< symfony/framework-bundle ###
