--- a/.env
+++ b/.env
@@ -14,6 +14,8 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+SOFTWARE_VERSION=0.1-23032023-alpha
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=045d3facae5230d5802e09745ca94614
