--- a/.env
+++ b/.env
@@ -25,4 +25,5 @@ APP_SECRET=045d3facae5230d5802e09745ca94614
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/cex?sslmode=disable&charset=utf8mb4"
+#DATABASE_URL="sqlite:///%kernel.project_dir%/var/app.db"
 ###< doctrine/doctrine-bundle ###
